<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="50dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/ArmyKnowledge_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@color/red_dark"
                android:drawableTop="@mipmap/icon_books"
                android:foreground="?attr/selectableItemBackground"
                android:paddingTop="25dp"
                android:text="@string/army_knowledge"
                android:textAllCaps="false"
                android:textColor="#2f2e2e"
                android:textSize="18sp" />

            <Button
                android:id="@+id/PT_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@color/lime_dark"
                android:drawableTop="@mipmap/icon_running"
                android:foreground="?attr/selectableItemBackground"
                android:paddingTop="25dp"
                android:text="@string/physical_training"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/RM_button"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@color/yellow_dark"
                android:drawableLeft="@mipmap/icon_sights"
                android:foreground="?attr/selectableItemBackground"
                android:paddingLeft="45dp"
                android:text="@string/rifle_marksmanship"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/resiliency_button"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@color/green_dark"
                android:drawableTop="@mipmap/icon_resilient"
                android:foreground="?attr/selectableItemBackground"
                android:paddingTop="25dp"
                android:text="@string/resiliency"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp" />

            <Button
                android:id="@+id/returnFromBasic_button"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@color/blue_dark"
                android:drawableTop="@mipmap/icon_army_white"
                android:paddingTop="25dp"
                android:text="@string/returning_from_basic"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
